--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
                 </p>
             </header>
             <div class="grid">
-                <div class="card card--supervisor row-middle">
+                <article class="card card--supervisor row-middle">
                     <h3>Supervisor</h3>
                     <p>Monitors activity to identify project roadblocks</p>
                     <img src="./images/icon-supervisor.svg" alt="" />
-                </div>
-                <div class="card card--teambuilder">
+                </article>
+                <article class="card card--teambuilder">
                     <h3>Team Builder</h3>
                     <p>Scans our talent network to create the optimal team for your project</p>
                     <img src="./images/icon-team-builder.svg" alt="" />
-                </div>
-                <div class="card card--karma">
+                </article>
+                <article class="card card--karma">
                     <h3>Karma</h3>
                     <p>Regularly evaluates our talent to ensure quality</p>
                     <img src="./images/icon-karma.svg" alt="" />
-                </div>
-                <div class="card card--calculator row-middle last-col">
+                </article>
+                <article class="card card--calculator row-middle last-col">
                     <h3>Calculator</h3>
                     <p>Uses data from past projects to provide better delivery estimates</p>
                     <img src="./images/icon-calculator.svg" alt="" />
-                </div>
+                </article>
             </div>
         </main>
     </body>
